# rust-llm-observability-guide

./: .gitignore  Cargo.toml  README-otel-signoz-rig-agents.md  README.md
examples/: gemini_multi_agent.rs  gemini_rig_basic.rs  gemini_rig_tools.rs  otel.rs  otel_smoke.rs
scripts/: run-otel-rig-examples.sh  run-otel-smoke-check.sh
src/: main.rs
