[package]
name = "rust-llm-observability-guide"
version = "0.1.0"
edition = "2024"
description = "OpenTelemetry + SigNoz tutorial for Rig Gemini agents with practical Rust examples"
license = "MIT"
readme = "README.md"
rust-version = "1.70"
categories = ["development-tools", "api-bindings"]
keywords = ["opentelemetry", "signoz", "rig", "gemini", "tracing", "observability"]

[dependencies]
anyhow = "1"
opentelemetry = { version = "0.30.0", features = ["trace"] }
opentelemetry_sdk = { version = "0.30.0", features = ["trace", "rt-tokio"] }
opentelemetry-otlp = { version = "0.30.0", features = ["grpc-tonic", "trace", "tls-roots"] }
rig = { package = "rig-core", version = "0.31.0" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-opentelemetry = "0.31.0"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
tonic = { version = "0.12" }
